# xlview

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.mjs  editor.html  index.html  justfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: ci.yml  deploy.yml  publish.yml  static.yml
_site/pkg/: xl-view.js  xlview.js  xlview_bg.wasm
_site/src/demo/: viewer.js  viewer.js.map
_site/test/: kitchen_sink_v2.xlsx  manifest.json
bench/: README.md  bench.spec.ts  bench.ts  justfile  manifest.json  package.json  playwright.config.ts  summarize.mjs
bench/providers/: index.ts  sheetjs.ts  xlview.ts
benches/: parsing.rs
docs/: ECMA376_COMPLIANCE.md  WEB_SYS_CANVAS_GUIDE.md
docs/bugs/: 007-auto-color-always-black.md  008-border-color-default-wrong.md  009-gradient-fills-not-parsed.md  010-base-col-width-not-parsed.md  011-color-transforms-not-parsed.md  012-locale-formats-missing.md  013-missing-builtin-numfmt-ids.md  015-conditional-formatting-thresholds-ignored.md  016-shrink-to-fit-not-implemented.md  017-indent-hardcoded-px.md  018-default-row-height-hardcoded.md  README.md
examples/: parse_xlsx.rs
js/: xl-edit.d.ts  xl-edit.ts  xl-view.d.ts  xl-view.ts
scripts/: generate_kitchen_sink_v2.py  generate_kitchen_sink_v3.py  generate_test_xlsx.py  patch-pkg.mjs  render_xlsx.mjs  scroll_loop.sh
src/: auto_filter.rs  cell_ref.rs  charts.rs  color.rs  comments.rs  conditional.rs  csv.rs  data_validation.rs  drawings.rs  error.rs  formula.rs  hyperlinks.rs  lib.rs  named_styles.rs  namespaces.rs  numfmt.rs  outlines.rs  page_setup.rs  protection.rs  rich_text.rs  sparklines.rs  styles.rs  theme_parser.rs  workbook_meta.rs  xml_helpers.rs
src/demo/: editor.ts  types.ts  viewer.ts
src/editor/: input.rs  mod.rs  mutation.rs
src/export/: mod.rs  sheet_writer.rs  zip_patcher.rs
src/layout/: mod.rs  sheet_layout.rs  viewport.rs
src/parser/: mod.rs  relationships.rs  styles.rs  worksheet.rs
src/render/: backend.rs  blit.rs  cache.rs  colors.rs  mod.rs  selection.rs
src/render/canvas/: charts.rs  conditional.rs  frozen.rs  headers.rs  indicators.rs  mod.rs  renderer.rs  shapes.rs  sparklines.rs
src/render/wgpu_backend/: buffers.rs  mod.rs  pipelines.rs  renderer.rs  text_atlas.rs
src/types/: cell.rs  chart.rs  content.rs  drawing.rs  filter.rs  formatting.rs  mod.rs  page.rs  rich_text.rs  selection.rs  sparkline.rs  style.rs  workbook.rs
src/viewer/: clipboard.rs  events.rs  mod.rs  scroll.rs
test/: chart_pie_sample.xlsx  colors_test.xlsx  kitchen_sink.xlsx  large_5000x20.xlsx  manifest.json  minimal.xlsx  styled.xlsx  test_comments.xlsx
tests/: README.md  alignment_tests.rs  auto_filter_tests.rs  border_style_tests.rs  border_tests.rs  cell_type_tests.rs  cf_data_bar_negative_tests.rs  cf_rule_tests.rs  chart_tests.rs  charts_tests.rs  comment_indicator_tests.rs  comment_rich_text_tests.rs  comment_tests.rs  compliance_tests.rs  conditional_formatting_tests.rs  data_validation_tests.rs  date_format_tests.rs  dimension_tests.rs  drawing_tests.rs  editing_tests.rs  feature_registry.rs  fill_tests.rs  font_rendering_tests.rs  font_tests.rs  frozen_panes_rendering_tests.rs  frozen_panes_tests.rs  fuzz_validation_tests.rs  gradient_fill_tests.rs  hyperlink_rendering_tests.rs  hyperlink_tests.rs  images_tests.rs  inline_string_tests.rs  integration_tests.rs  layout_debug.rs  layout_tests.rs  merge_tests.rs  mod.rs  named_styles_tests.rs  numfmt_tests.rs  pattern_fill_tests.rs  (+13 more)
tests/browser/: bench_style_test.html  index_style_test.html  run_scroll_test.ts  scroll_header_test.spec.ts  scroll_test.html
tests/common/: mod.rs
tests/e2e/: quick_test.ts  test_suite.ts
tests/fixtures/: mod.rs
(+3 files in other folders)
